# libsigcplusplus

./: .clang-format  .cvsignore  .gitignore  AUTHORS  BUILDING.md  CMakeLists.txt  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  README.md  README_build  TODO  autogen.sh  build.zig  build.zig.zon  config.h.in  configure.ac  libsigc++2.doap  libsigcplusplus.doap  meson.build  meson_options.txt  sigc++-2.0-uninstalled.pc.in  sigc++-2.0.pc.in  sigc++-uninstalled.pc.in  sigc++.pc.in  sigc++config.h.cmake  sigc++config.h.in  sigc++config.h.meson  必读.txt
MSVC_NMake/: MSVC-Builds.md  Makefile.vc  README.txt  build-rules-msvc.mak  config-msvc.mak  create-lists-msvc.mak  detectenv-msvc.mak  filelist.am  generate-msvc.mak  info-msvc.mak  install.mak  libsigc++2.vcxproj  libsigc++2.vcxproj.filters  meson.build  res.h  sigc-debug-dll-build-defines.props  sigc-install.props  sigc.rc.in  test_accum_iter.vcxproj.filters  test_accumulated.vcxproj  test_accumulated.vcxproj.filters  test_bind.vcxproj  test_bind.vcxproj.filters  test_bind_return.vcxproj.filters  test_compose.vcxproj  test_compose.vcxproj.filters  test_copy_invalid_slot.vcxproj.filters  test_custom.vcxproj.filters  test_disconnect_during_emit.vcxproj  test_exception_catch.vcxproj  test_exception_catch.vcxproj.filters  test_hide.vcxproj  test_limit_reference.vcxproj  test_limit_reference.vcxproj.filters  test_mem_fun.vcxproj  test_mem_fun.vcxproj.filters  test_ptr_fun.vcxproj  test_retype_return.vcxproj  test_signal.vcxproj  test_slot.vcxproj  (+2 more)
MSVC_Net2003/: .cvsignore  Makefile.am  libsigc++2_msvcNet2003.sln  libsigc++2_msvcNet2003.vcproj  sigc++config.h  sigc-2.0.rc.in
MSVC_Net2005/: .cvsignore  Makefile.am  blank.cpp  filelist.am  libsigc++2.sln  libsigc++2.vcproj  sigc.rc.in
MSVC_Net2008/: blank.cpp  filelist.am  libsigc++2.sln  libsigc++2.vcproj  sigc.rc.in
MSVC_Net2010/: filelist.am  libsigc++2.sln  libsigc++2.vcxproj  (+32 more)
docs/: .gitignore  Makefile  Makefile.am  Makefile_web.am_fragment  _config.yml  devel.md  devel.shtml  doc-manual.am  doc.md  doc.shtml  download.md  glossary.md  glossary.shtml  index.html  index.md  license.md  license.shtml  link.md  link.shtml  stable.md  stable.shtml  style.css
docs/_layouts/: default.html
docs/docs/: .gitignore  Makefile.am  doc-manual.am  index.html
docs/docs/manual/: can_use_xmllint.xml  libsigc_manual.xml  meson.build
docs/docs/reference/: Doxyfile.in  meson.build
docs/fragments/: footer.html_fragment
docs/images/: Makefile.am
docs/manual/: Makefile.am  libsigc_manual.xml  meson.build
docs/reference/: .cvsignore  Doxyfile.in  Makefile.am  README  beautify_docs.pl  libsigc_footer.html_fragment  libsigc_header.html_fragment  meson.build
docs/website/: ChangeLog  Makefile  benchmark.shtml  devel.shtml  doc.shtml  glossary.shtml  index.shtml  license.shtml  link.shtml  notes.shtml  stable.shtml  style.css
docs/website/fragments/: footer.html_fragment  html_declaration.html_fragment
examples/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  hello_world.cc  member_method.cc  meson.build
examples/qt/: exampleclass.cpp  exampleclass.h
examples/qt_with_qmake/: README.md  exampleclass.cpp  exampleclass.h  main.cpp  qt-sigcpp.pro
sigc++/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  Makefile.am_fragment  bind.h  bind_return.h  callof.h.m4  class_slot.h.m4  compatibility.h  compatibility.h.m4  connection.cc  connection.h  filelist.am  hide.h.m4  limit_reference.h  member_method_trait.h  meson.build  method_slot.h.m4  object_slot.h.m4  reference_wrapper.h  retype.h.m4  retype_return.h  scoped_connection.cc  scoped_connection.h  sigc++.h  signal.cc  signal.h  signal.h.m4  signal_base.cc  signal_base.h  signal_connect.h  slot.h  slot.h.m4  template.macros.m4  trackable.cc  trackable.h  tuple_cat.h  tuple_end.h  tuple_transform_each.h  (+3 more)
sigc++/adaptors/: .cvsignore  Makefile.am  adaptor_base.h  adaptor_trait.h  adaptor_trait.h.m4  adaptors.h  adapts.h  bind.h  bind.h.m4  bind_return.h  bind_return.h.m4  bound_argument.h  compose.h  compose.h.m4  deduce_result_type.h  deduce_result_type.h.m4  exception_catch.h  exception_catch.h.m4  hide.h  hide.h.m4  meson.build  retype.h  retype_return.h  retype_return.h.m4  track_obj.h  tuple_visitor_visit_each.h
sigc++/adaptors/lambda/: .cvsignore  Makefile.am  base.h.m4  group.h.m4  lambda.cc.m4  lambda.h  meson.build  operator.h.m4  select.h.m4
sigc++/adaptors/lambda/macros/: base.h.m4  group.h.m4  lambda.cc.m4  operator.h.m4  select.h.m4
sigc++/adaptors/macros/: adaptor_trait.h.m4  bind.h.m4  bind_return.h.m4  compose.h.m4  deduce_result_type.h.m4  exception_catch.h.m4  hide.h.m4  retype.h.m4  retype_return.h.m4  track_obj.h.m4
sigc++/functors/: .cvsignore  Makefile.am  closure.cc  closure.h.m4  functor_base.h  functor_trait.h  functor_trait.h.m4  functors.h  mem_fun.h  mem_fun.h.m4  meson.build  ptr_fun.h  ptr_fun.h.m4  slot.cc  slot.h  slot.h.m4  slot_base.cc  slot_base.h
sigc++/functors/macros/: functor_trait.h.m4  mem_fun.h.m4  ptr_fun.h.m4  slot.h.m4
sigc++/macros/: class_slot.h.m4  hide.h.m4  limit_reference.h.m4  method_slot.h.m4  object_slot.h.m4  retype.h.m4  signal.h.m4  slot.h.m4  template.macros.m4
sigc++/tuple-utils/: tuple_cat.h  tuple_cdr.h  tuple_end.h  tuple_for_each.h  tuple_start.h  tuple_transform_each.h
tests/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  benchmark.cc  memleakcheck.sh  meson.build  test_accum_iter.cc  test_accumulated.cc  test_bind.cc  test_bind_as_slot.cc  test_bind_ref.cc  test_bind_refptr.cc  test_bind_return.cc  test_callof.cc  test_closure.cc  test_compatibility.cc  test_compose.cc  test_connection.cc  test_constexpr.cc  test_copy_invalid_slot.cc  test_cpp11_lambda.cc  test_custom.cc  test_deduce_result_type.cc  test_disconnect.cc  test_disconnect_during_emit.cc  test_exception_catch.cc  test_functor_trait.cc  test_hide.cc  test_lambda.cc  test_limit_reference.cc  test_mem_fun.cc  test_member_method_trait.cc  test_ptr_fun.cc  test_retype.cc  test_retype_return.cc  test_rvalue_ref.cc  test_scoped_connection.cc  test_signal.cc  test_signal_connect.cc  (+22 more)
(+212 files in other folders)
